feat: Update frame search
